[package]
name = "craww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
rusqlite = { version = "0.28.0", features = ["chrono"] }
trust-dns-resolver = "0.22.0"
