[package]
name = "craww"
version = "0.1.0"
edition = "2021"

[dependencies]
bloom = "0.2.0"
chrono = "0.4.23"
lazy_static = "1.5.0"
regex = "1.7.0"
rusqlite = { version = "0.28.0", features = ["chrono"] }
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.5.9"
trust-dns-resolver = "0.22.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
